[1.542] sync, 7.0 release - faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -115,19 +115,19 @@ boot> <b>boot hd1d:/bsd.rd</b>
 	  если вы используете одну из архитектур, отличных от x86. Они содержат
 	  подробные инструкции и предостережения:
           <p>
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/alpha/INSTALL.alpha">alpha</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/amd64/INSTALL.amd64">amd64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/arm64/INSTALL.arm64">arm64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/armv7/INSTALL.armv7">armv7</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/hppa/INSTALL.hppa">hppa</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/i386/INSTALL.i386">i386</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/landisk/INSTALL.landisk">landisk</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/loongson/INSTALL.loongson">loongson</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/luna88k/INSTALL.luna88k">luna88k</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/macppc/INSTALL.macppc">macppc</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/octeon/INSTALL.octeon">octeon</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/powerpc64/INSTALL.powerpc64">powerpc64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/sparc64/INSTALL.sparc64">sparc64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/alpha/INSTALL.alpha">alpha</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/amd64/INSTALL.amd64">amd64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/arm64/INSTALL.arm64">arm64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/armv7/INSTALL.armv7">armv7</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/hppa/INSTALL.hppa">hppa</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/i386/INSTALL.i386">i386</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/landisk/INSTALL.landisk">landisk</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/loongson/INSTALL.loongson">loongson</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/luna88k/INSTALL.luna88k">luna88k</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/macppc/INSTALL.macppc">macppc</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/octeon/INSTALL.octeon">octeon</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/powerpc64/INSTALL.powerpc64">powerpc64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/sparc64/INSTALL.sparc64">sparc64</a>]
       <li>Если досуп к сети в вашем случае возможен только через wireless, узнайте
 	  заранее, требует ли ваша карта
 	  <a href="http://firmware.openbsd.org/firmware">дополнительной прошивки</a>?
@@ -161,48 +161,48 @@ boot> <b>boot hd1d:/bsd.rd</b>
 
 <ul>
 <li>
-<b>installXX.img</b>
+<b>install70.img</b>
 <br>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/amd64/install69.img">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/arm64/install69.img">arm64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/i386/install69.img">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/octeon/install69.img">octeon</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/powerpc64/install69.img">powerpc64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/sparc64/install69.img">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/install70.img">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/arm64/install70.img">arm64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/install70.img">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/octeon/install70.img">octeon</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/install70.img">powerpc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/install70.img">sparc64</a>]
 <br>
 Образ диска, который может быть записан на USB флешку или подобное устройство.
 Содержит <a href="#FilesNeeded">установочные компоненты</a>.
 
 <p>
 <li>
-<b>minirootXX.img</b>
+<b>miniroot70.img</b>
 <br>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/alpha/miniroot68.img">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/amd64/miniroot68.img">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/arm64/miniroot68.img">arm64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/miniroot70.img">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/miniroot70.img">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/arm64/miniroot70.img">arm64</a>]
 <!-- armv7 has multiple miniroot files for different boards -->
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/armv7/">armv7</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/i386/miniroot68.img">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/landisk/miniroot68.img">landisk</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/loongson/miniroot68.img">loongson</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/luna88k/miniroot68.img">luna88k</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/octeon/miniroot68.img">octeon</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/powerpc64/miniroot69.img">powerpc64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/sparc64/miniroot68.img">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/armv7/">armv7</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/miniroot70.img">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/landisk/miniroot70.img">landisk</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/loongson/miniroot70.img">loongson</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/luna88k/miniroot70.img">luna88k</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/octeon/miniroot70.img">octeon</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/miniroot70.img">powerpc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/miniroot70.img">sparc64</a>]
 <br>
 Это такой же образ, как и выше, но без установочных компонент.
 Они загружаются из интернет или c локального диска.
 
 <p>
 <li>
-<b>installXX.iso</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/alpha/install68.iso">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/amd64/install68.iso">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/hppa/install68.iso">hppa</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/i386/install68.iso">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/macppc/install68.iso">macppc</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/powerpc64/install69.iso">powerpc64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/sparc64/install68.iso">sparc64</a>]
+<b>install70.iso</b>
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/install70.iso">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/install70.iso">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/hppa/install70.iso">hppa</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/install70.iso">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/macppc/install70.iso">macppc</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/powerpc64/install70.iso">powerpc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/install70.iso">sparc64</a>]
 <br>
 ISO 9660 образ. Используется для создания установочных CD/DVD.
 <br>
@@ -210,22 +210,22 @@ ISO 9660 образ. Используется для создания устан
 
 <p>
 <li>
-<b>cdXX.iso</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/alpha/cd68.iso">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/amd64/cd68.iso">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/hppa/cd68.iso">hppa</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/i386/cd68.iso">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/macppc/cd68.iso">macppc</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/sparc64/cd68.iso">sparc64</a>]
+<b>cd70.iso</b>
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/alpha/cd70.iso">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/cd70.iso">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/hppa/cd70.iso">hppa</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/cd70.iso">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/macppc/cd70.iso">macppc</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/cd70.iso">sparc64</a>]
 <br>
 Такой же образ как и выше, но без установочных компонент.
 
 <p>
 <li>
-<b>floppyXX.img</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/amd64/floppy68.img">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/i386/floppy68.img">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.9/sparc64/floppy68.img">sparc64</a>]
+<b>floppy70.img</b>
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/amd64/floppy70.img">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/i386/floppy70.img">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/7.0/sparc64/floppy70.img">sparc64</a>]
 <br>
 Поддерживает некоторые старые машины, где отсутствуют другие возможности для загрузки.
 </ul>
@@ -240,14 +240,14 @@ ISO 9660 образ. Используется для создания устан
 
 <pre class="cmdbox">
 $ <b>sha256 -C SHA256 miniroot*.img</b>
-(SHA256) minirootXX.img: OK
+(SHA256) miniroot70.img: OK
 </pre>
 
 Если же вы используете ОС с GNU coreutils:
 
 <pre class="cmdbox">
 $ <b>sha256sum -c --ignore-missing SHA256</b>
-minirootXX.img: OK
+miniroot70.img: OK
 </pre>
 
 Однако это используется лишь для проверки <i>правильной загрузки</i> файлов по сети.
@@ -256,18 +256,18 @@ minirootXX.img: OK
 контрольные суммы.
 
 <pre class="cmdbox">
-$ <b>signify -Cp /etc/signify/openbsd-XX-base.pub -x SHA256.sig miniroot*.img</b>
+$ <b>signify -Cp /etc/signify/openbsd-70-base.pub -x SHA256.sig miniroot*.img</b>
 Signature Verified
-minirootXX.img: OK
+miniroot70.img: OK
 </pre>
 
 Обратите внимание, что пакет signify в других операционных системах может не
 содержать требуемого
-<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/openbsd-69-base.pub">открытого ключа</a>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/openbsd-70-base.pub">открытого ключа</a>
 или быть установлен в другое место.
 
 <p>
-Образы <code>installXX.iso</code> и <code>installXX.img</code> не содержат файл
+Образы <code>install70.iso</code> и <code>install70.img</code> не содержат файл
 <code>SHA256.sig</code>, поэтому установщик пожалуется, что не может проверить
 подпись включенных файлов, которые содержат установочные компоненты:
 
@@ -338,7 +338,7 @@ GNU версия <code>dd</code> потребует <code>bs=1M</code> (обра
 root on rd0a swap on rd0b dump on rd0b
 erase ^?, werase ^W, kill ^U, intr ^C, status ^T
 
-Welcome to the OpenBSD/amd64 X.X installation program.
+Welcome to the OpenBSD/amd64 7.0 installation program.
 (I)nstall, (U)pgrade, (A)utoinstall or (S)hell?
 </pre>
 
@@ -355,34 +355,34 @@ Welcome to the OpenBSD/amd64 X.X installation program.
     <dd>Ядро с поддержкой мультипроцессорных систем (SMP) (доступно не для всех платформ).
   <dt><code>bsd.rd</code>
     <dd><a href="#bsd.rd">ramdisk ядро</a>
-  <dt><code>baseXX.tgz</code>
+  <dt><code>base70.tgz</code>
     <dd>Базовая система <b>(обязательно для установки)</b>
-  <dt><code>compXX.tgz</code>
+  <dt><code>comp70.tgz</code>
     <dd>Компиляторы, заголовочные файлы (headers) и библиотеки
-  <dt><code>manXX.tgz</code>
+  <dt><code>man70.tgz</code>
     <dd>Справочные man-страницы
-  <dt><code>gameXX.tgz</code>
+  <dt><code>game70.tgz</code>
     <dd>Консольные игры (text-based games)
-  <dt><code>xbaseXX.tgz</code>
+  <dt><code>xbase70.tgz</code>
     <dd>Основные библиотеки и утилиты для X11
-        (требует <code>xshareXX.tgz</code>)
-  <dt><code>xfontXX.tgz</code>
+        (требует <code>xshare70.tgz</code>)
+  <dt><code>xfont70.tgz</code>
     <dd>Шрифты, используемые X11
-  <dt><code>xservXX.tgz</code>
+  <dt><code>xserv70.tgz</code>
     <dd>X серверы
-  <dt><code>xshareXX.tgz</code>
+  <dt><code>xshare70.tgz</code>
     <dd>Справочные man-страницы и настройки для X11
 </dl>
 
 Новым пользователям рекомендуется установить все эти компоненты.
 
 <p>
-Некоторые библиотеки из <code>xbaseXX.tgz</code>, такие как freetype или
+Некоторые библиотеки из <code>xbase70.tgz</code>, такие как freetype или
 fontconfig, используются программами для работы с текстом или графикой и без X.
-Такие программы обычно нуждаются в шрифтах из <code>xfontXX.tgz</code>
+Такие программы обычно нуждаются в шрифтах из <code>xfont70.tgz</code>
 или пакетов со шрифтами.
 Для простоты разработчики решили не поддерживать минимальный компонент
-<code>xbaseXX.tgz</code>, который позволял бы работать большинству не-X портов.
+<code>xbase70.tgz</code>, который позволял бы работать большинству не-X портов.
 
 <h3>Добавление компоненты после установки</h3>
 
@@ -485,29 +485,28 @@ $ <b>(dmesg; sysctl hw.sensors) > ~/dmesg.txt</b>
 
 <h2 id="site">Настройка процесса установки</h2>
 
-<h3>Компонент <code>siteXX.tgz</code></h3>
+<h3>Компонент <code>site70.tgz</code></h3>
 
 Скрипты установки и обновления OpenBSD позволяют выбирать установленные
-пользователем настройки, называемые <code>siteXX.tgz</code>, где <code>XX</code>
-- версия релиза.
+пользователем настройки, называемые <code>site70.tgz</code>.
 Как и официальные <a href="#FilesNeeded">копоненты установки</a>, это
 <a href="https://man.openbsd.org/tar">tar(1)</a> архив, распаковывапющийся в
 корень ФС <code>/</code> и при помощи опций <code>-xzphf</code>.
 Он распаковается последним, поэтому отлично подходит для изменения файлов,
 которые присутствуют в системе после установки.
 Кроме того, можно использовать компоненты, зависящие лишь от имени хоста,
-при использовании имени <code>siteXX-$(hostname -s).tgz</code>.
+при использовании имени <code>site70-$(hostname -s).tgz</code>.
 
 <p>
 <b>Заметка:</b>
 Если вы хотите использовать установочные компоненты, загружая их через HTTP(s),
-поместите <code>siteXX.tgz</code> в каталог, откуда будете загружать архив,
+поместите <code>site70.tgz</code> в каталог, откуда будете загружать архив,
 и добавьте его имя в ваш  <code>index.txt</code>.
 Этот компонент будет доступен во время установки системы.
 
 <h3>Скрипты <code>install.site</code> и <code>upgrade.site</code></h3>
 
-Если компонент <code>siteXX.tgz</code> содержит файл <code>/install.site</code>,
+Если компонент <code>site70.tgz</code> содержит файл <code>/install.site</code>,
 установщик запустит его при помощи
 <a href="https://man.openbsd.org/chroot">chroot(8)</a>, в только что созданный
 для установки корень ФС.
