[1.226] better wording - faq/faq13.html

--- a/faq/faq13.html
+++ b/faq/faq13.html
@@ -25,7 +25,7 @@ td {
 <i>Open</i><b>BSD</b></a>
 FAQ - Мультимедиа
 <small>
-<a href="index.html">[FAQ Каталог]</a>
+<a href="index.html">[FAQ - На главную]</a>
 </small>
 </h2>
 <hr>
@@ -62,8 +62,9 @@ FAQ - Мультимедиа
 
 <h2 id="enablerec">Включение аудиозаписи</h2>
 
-По соображениям конфиденциальности запись звука в OpenBSD по умолчанию отключена.
-Для его включения можно использовать <code>kern.audio.record</code> sysctl.
+По соображениям конфиденциальности запись звука в OpenBSD по
+умолчанию отключена. Для включения используйте
+<code>kern.audio.record</code> sysctl.
 
 <pre class="cmdbox">
 # <b>sysctl kern.audio.record=1</b>
@@ -72,25 +73,29 @@ FAQ - Мультимедиа
 
 <h2 id="confaudio">Настройка аудиооборудования</h2>
 
-Каждая модель звуковой карты имеет собственный набор элементов управления.
-У некоторых вообще нет элементов управления; у других по сотне и больше.
-Запуск <a href="https://man.openbsd.org/mixerctl">Mixerctl(8)</a> от имени пользователя (root)
-отобразит все элементы управления и текущие настройки.
+Каждая модель звуковой карты имеет собственный набор элементов
+управления. У некоторых вообще нет элементов управления; у других
+по сотне и больше.
+Запуск <a href="https://man.openbsd.org/mixerctl">Mixerctl(8)</a>
+от имени суперпользователя (root) отобразит все элементы
+управления и текущие настройки.
 
 <p>
-Не каждый вариант каждого аудиочипа обязательно попадает во внешний мир.
-Например, в списке может быть больше выходов, чем физически подключено.
+Не каждая конфигурация того или иного аудиочипа обязательно соответствует
+реальности. Например, может быть перечисленно больше выходов, чем
+действительно подключено.
 Элементы управления аудиоустройством могут быть помечены по-разному.
-Обычно элементы управления имеют значимые метки, но иногда нужно просто
-попробуйте разные настройки, чтобы увидеть, какой эффект дает каждый элемент управления.
+Обычно они хорошо подписанны, но иногда нужно просто попробовать разные
+настройки, чтобы понять, какой эффект дает каждый элемент управления.
 
 <p>
 Вот список элементов управления, которые следует учитывать:
 
 <p>
 <strong>Управление отключением звука и уровнем</strong> - 
-Даже если кажется, что основные элементы управления настроены правильно, может быть
-несколько регуляторов отключения звука или уровня на пути прохождения сигнала.
+Даже если кажется, что все настроено правильно правильно,
+может быть несколько регуляторов отключения звука (mute) или уровня
+громкости на пути прохождения сигнала.
 В приведенном ниже примере устройство имеет основной уровень записи и
 регулировка усиления микрофона:
 
@@ -101,15 +106,15 @@ inputs.mic=85,85
 </pre>
 
 <strong>Отключение питания внешнего усилителя (EAPD)</strong> - 
-Этот переключатель обычно используется для энергосбережения в ноутбуках и может потребоваться
-для получения выходного сигнала:
+Этот переключатель обычно используется для энергосбережения в
+ноутбуках и может использоваться для выходного сигнала:
 
 <pre class="cmdbox">
 outputs.spkr_eapd=on
 </pre>
 
 <strong>Источник записи</strong> - 
-Некоторые устройства имеют несколько микрофонных входов.
+Некоторые устройства имеют несколько входов для микрофонов.
 Примеры таких элементов управления:
 
 <pre class="cmdbox">
@@ -117,8 +122,8 @@ record.source=mic
 record.adc-0:1_source=mic
 </pre>
 
-Чтобы изменения вступали в силу при каждой перезагрузке, отредактируйте
-файл: <code>/etc/mixerctl.conf</code>.
+Чтобы изменения вступали в силу при каждой перезагрузке,
+отредактируйте файл: <code>/etc/mixerctl.conf</code>.
 Например:
 
 <pre class="cmdbox">
@@ -128,16 +133,19 @@ inputs.mic=85,85
 
 <h2 id="audiolevel">Регулировка уровней звука</h2>
 
-Утилита <a href="https://man.openbsd.org/sndioctl">sndioctl(1)</a> используется для управления звуком от имени обычного пользователя.
-При его запуске без аргументов будут перечислены все элементы управления и текущие настройки.
+Утилита <a href="https://man.openbsd.org/sndioctl">sndioctl(1)</a>
+используется для управления звуком от имени обычного пользователя.
+При его запуске без аргументов будут перечислены все элементы
+управления и текущие настройки.
 
 <p>
 Элемент управления <code>output.level</code> присутствует всегда.
-Он либо соответствует аппаратному управлению, либо эмулируется программно.
+Он либо соответствует аппаратному управлению, либо эмулируется
+программно.
 
 <h2 id="usbaudio">Использование аудиоинтерфейса USB</h2>
 
-Пример аудиоинтерфейса USB в выводе dmesg может выглядеть так:
+Пример USB-аудиоинтерфейса в выводе dmesg может выглядеть так:
 
 <pre class="cmdbox">
 uaudio0 at uhub2 port 1 configuration 1 interface 1 "ABC C-Media USB Audio Device" rev 1.10/1.00 addr 2
@@ -145,13 +153,14 @@ uaudio0: class v1, full-speed, sync, channels: 2 play, 1 rec, 8 ctls
 audio1 at uaudio0
 </pre>
 
-В большинстве систем первым аудиоустройством является внутренняя звуковая карта.
-Затем аудиоустройство USB становится вторым при подключении.
+В большинстве систем первым аудиоустройством является внутренняя
+звуковая карта. USB-аудиоустройство при подключении становится вторым.
 По умолчанию <a href="https://man.openbsd.org/sndiod">sndiod(8)</a>
 конфигурации, оба устройства известны программам как
 <code>snd/0</code> (по умолчанию), и <code>snd/1</code>
 соответственно могут использоваться независимо.
-Программы, настроенные для использования <code>snd/1</code>, будут использовать USB-устройство.
+Программы, настроенные для использования <code>snd/1</code>,
+будут использовать USB-устройство.
 
 <p>
 <a href="https://man.openbsd.org/sndiod">sndiod(8)</a> можно настроить
@@ -163,13 +172,14 @@ audio1 at uaudio0
 # <b>rcctl restart sndiod</b>
 </pre>
 
-Когда сервер открывает устройство, он сначала пытается подключиться к USB.
-Если его нет, вместо него используется внутренний.
-Если USB-устройство отключено, sndiod пытается продолжить работу.
+Когда сервер опрашивает устройства, он сначала пытается подключиться к USB.
+Если его нет, вместо него используется внутренняя звуковая плата.
+Если USB-устройство отключено, sndiod пытается продолжить работу,
 используя внутреннюю звуковую карту.
-Если USB-устройство подключено снова, sndiod его увидит.
+Если USB-устройство подключено снова, sndiod его увидит
 при следующей попытке открыть устройство.
-Чтобы заставить sndiod переключаться между устройствами, перезагрузите сервер:
+Чтобы заставить sndiod переключаться между устройствами,
+перезагрузите сервер:
 
 <pre class="cmdbox">
 # <b>rcctl reload sndiod</b>
@@ -179,15 +189,16 @@ audio1 at uaudio0
 
 <p>
 OpenBSD поставляется с <a href="https://man.openbsd.org/aucat">aucat(1)</a>,
-программа, способная воспроизводить несжатые файлы WAV, AIFF и AU.
-Его можно использовать в очень простых случаях или для тестирования воспроизведения:
+программой, способной воспроизводить несжатые файлы WAV, AIFF и AU.
+Её можно использовать в очень простых случаях или просто для тестирования:
 
 <pre class="cmdbox">
 $ <b>aucat -i filename.wav</b>
 </pre>
 
-Есть много других проигрывателей, доступных в виде <a href="faq15.html">пакетов</a>,
-которые поддерживают другие аудиоформаты.
+Есть много других проигрывателей, доступных в виде
+<a href="faq15.html">пакетов</a>,
+которые поддерживают и другие аудиоформаты.
 
 <!-- XXX
 <h2 id="playCD">Playing Audio CDs</h2>
@@ -195,7 +206,7 @@ XXX -->
 
 <h2 id="recordaudio">Запись аудиофайлов</h2>
 
-После включения записи с помощью sysctl <code>kern.audio.record</code>.
+После включения записи с помощью sysctl <code>kern.audio.record</code>
 <a href="https://man.openbsd.org/aucat">aucat(1)</a>
 может использоваться для записи несжатых файлов WAV, AIFF и AU.
 
@@ -214,39 +225,44 @@ $ <b>aucat -i file.wav</b>
 </pre>
 
 Если запись работала, но воспроизведение записи было тихим или
-не то, что ожидалось, возможно, микшер нуждается в некоторой настройке.
-Убедитесь, что вы выбрали правильный источник для записи и что он
+не таким, каким ожидалось, возможно, микшер нуждается в некоторой
+настройке.
+Убедитесь, что был выбран правильный источник для записи, и что он
 включен.
 
 <p>
-При необходимости полученный WAV-файл можно сжать с помощью
-соответствующей программы из дерева портов.
-В качестве альтернативы для записи можно использовать такие порты, как sox, ffmpeg или audacity,
-обрабатывать и сжимать аудиофайлы.
+При необходимости полученный WAV-файл можно сжать при помощи
+соответствующей программы из портов.
+В качестве альтернативы для записи, обработки и сжатия аудиофайлов
+можно использовать такие порты как sox, ffmpeg или audacity.
 
 <h2 id="recordmon">Запись контрольного микса всего воспроизведения звука</h2>
 
-Поток мониторинга записывает комбинированный аудиовыход со всех воспроизводящих устройств,
-позволяя дублировать или сохранять все, что проходит через аудиоподсистему.
-Эта функция может быть полезна для скринкастов или любого вида микширования живого звука.
+Мониторинговый поток (monitoring stream) записывает комбинированный
+аудиосигнал со всех воспроизводящих устройств, позволяя дублировать
+или сохранять все, что проходит через аудиоподсистему.
+Эта функция может быть полезна для скринкастов или любого вида
+микширования живого звука.
 
 <p>
-Создайте подустройство монитора <code>mon</code> для
-<a href="https://man.openbsd.org/sndiod">sndiod(8)</a>, используя:
+Создайте monitor sub-device <code>mon</code> для
+<a href="https://man.openbsd.org/sndiod">sndiod(8)</a>
+при помощи:
 
 <pre class="cmdbox">
 # <b>rcctl set sndiod flags -s default -m play,mon -s mon</b>
 # <b>rcctl restart sndiod</b>
 </pre>
 
-Настройте свою программу для записи звука с устройства <code>snd/0.mon</code>,
-например:
+Настройте свою программу для записи звука с устройства
+<code>snd/0.mon</code>, например:
 
 <pre class="cmdbox">
 $ <b>aucat -f snd/0.mon -o file.wav</b>
 </pre>
 
-На этом этапе все, что воспроизводит ваша система, записано в <code>file.wav</code>.
+На этом этапе все, что воспроизводит ваша система,
+записано в <code>file.wav</code>.
 
 <h2 id="audiolat">Снижение задержки звука</h2>
 
