[1.331] sync - faq/faq8.html

--- a/faq/faq8.html
+++ b/faq/faq8.html
@@ -78,8 +78,9 @@ boot> <b>boot -s</b>
 это надежный и простой NTP-совместимый способ иметь точное время в системе.
 <a href="https://man.openbsd.org/ntpd">ntpd(8)</a> демон включается по умолчанию
 во время установки.
-Во время загрузки, <code>ntpd</code> постарается установить часы, в зависимости
-от данных, которые он получит от NTP-узлов, найденных при помощи
+Во время загрузки <code>ntpd</code> постарается установить дату и время,
+используемое в системе, в зависимости от данных, которые он получит от
+NTP-узлов, найденных при помощи
 <a href="https://man.openbsd.org/ntpd.conf#CONSTRAINTS">constraints</a>
 по https.
 
@@ -136,7 +137,7 @@ kern.utc_offset=-300
 иначе при загрузке будет неправильно настроено системное время.
 
 <p>
-Обычно, часовой пояс настраивается во время установки.
+Обычно часовой пояс настраивается во время установки.
 Если вам нужно изменить часовой пояс, вы можете создать новый symbolic link
 на подходящий файл часового пояса в <code>/usr/share/zoneinfo</code>.
 Например, чтобы настроить машину для использования EST5EDT в качестве
