[1.332] sync - faq/faq8.html

--- a/faq/faq8.html
+++ b/faq/faq8.html
@@ -129,7 +129,7 @@ kern.utc_offset=-300
 </pre>
 
 Ознакомьтесь с параметром "kern.utc_offset" в руководстве
-<a href="https://man.openbsd.org/sysctl.2">sysctl(2)</a>.
+<a href="https://man.openbsd.org/sysctl.2#KERN_UTC_OFFSET~2">sysctl(2)</a>.
 
 <p>
 Обратите внимание, что аппаратные часы (hardware clock) должны работать
