--- a/openbgpd/users.html
+++ b/openbgpd/users.html
@@ -7,7 +7,7 @@
 <meta name="description" content="OpenBGPD Testimonials">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-<link rel="canonical" href="http://www.openbgpd.org/users.html">
+<link rel="canonical" href="https://www.openbgpd.org/users.html">
 
 <style>
 blockquote {
